HW9 ->  - SaveStrategy renamed in Serialisator and moved in package storage/serializator  - ObjectStreamStorage renamed in ObjectStream and moved in storage/serializator  - refactored FileStorage and PathStorage